crates/check_cli/tests/snapshots/main_cases_config_path/raises_an_error_for_no_configuration_file_found.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `file.js`

```js
function name() { return "lorem" }
```

# Termination Message

```block
config configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Check couldn't find a configuration in the directory config.
  


```
