crates/check_cli/tests/snapshots/main_cases_config_path/raises_an_error_when_the_config_file_is_not_json.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.yml`

```yml
blah: foo
```

# Termination Message

```block
check.yml configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Invalid configuration file. Expected JSON or JSONC file, but got check.yml.
  


```
