crates/check_cli/tests/snapshots/main_cases_config_path/set_config_path_to_directory.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `config/check.jsonc`

```json
{
  "assist": {
    "enabled": true
  },
  "linter": {
    "enabled": false
  },
  "formatter": {
    "enabled": true
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "single" // comment
    }
  }
}
```

## `src/index.js`

```js
a['b']  =  42;
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
src/index.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - a['b']··=··42;
      1 │ + a['b']·=·42;
      2 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
