crates/check_cli/tests/snapshots/main_cases_config_path/set_config_path_to_file.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
snapshot_kind: text
---
## `config/a.jsonc`

```jsonc
{
  "assist": {
    "enabled": true
  },
  "linter": {
    "enabled": false
  },
  "formatter": {
    "enabled": true,
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "single", // comment
    }
  }
}
```

## `src/index.js`

```js
a['b']  =  42;
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
src/index.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - a['b']··=··42;
      1 │ + a['b']·=·42;
      2 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
